--- a/VRChat/99/927399.html
+++ b/VRChat/99/927399.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "lQkJJ62JFsy0RmoxcN7c4CwBrx0DxoOSRW5psTW9LRU="></script>
+    "eio5TmgzfWOXGAsgpDc9G8NhGq/H/aVJiF7oupHxOoU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"SobaChan 3DCGモデル","description":"知る人ぞ知るアプリ「SobaCha」のイメージキャラクターSobaChanが、ついに3Dで登場！\n\nVRChatでの使用を想定して制作されていますが、その他の用途(動画制作、ゲーム、アプリ開発……etc)にもお使い頂けます。","url":"https://booth.pm/ja/items/927399","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"2700","highPrice":"2900"},"image":"https://booth.pximg.net/c/620x620/39edc5c4-fd37-4865-94df-88cfbc8cbd88/i/927399/aea768fa-8b45-4ae1-9d1f-ec274965abb2_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="lQkJJ62JFsy0RmoxcN7c4CwBrx0DxoOSRW5psTW9LRU="></script>
+    nonce="eio5TmgzfWOXGAsgpDc9G8NhGq/H/aVJiF7oupHxOoU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -593,9 +593,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
