--- a/VRChat/42/927242.html
+++ b/VRChat/42/927242.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "mYcrTVat4dE2NaE4Rx0ODXRSl/rPBtuIfhm38D3/MKI="></script>
+    "9LLuUkxQlwhsl7NommbRD30Gi28fhcrIq+nRpX/Jc9k="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat用3Dモデル「超獣擬我　ツツジ」","description":"VRChat用モデル\n超獣擬我-ﾁｮｳｼﾞｭｳｷﾞｶﾞ-　「ツツジ」 vre1.13 (18/07/19)\n\n製作・配布：　NEG-13　(@NEG__13)\nBoothでも有料版を配布しております。中身に差異は御座いません。\nhttps://neg-13.booth.pm/items/927242\n\n\n◆内容物\n　本体　…　FBXファイル。テクスチャ\n　装備　…　剣(抜き身)、剣(納刀)、鞘、銃、ホルスターのFBXファイル。テクスチャ\n　Unitypackage　…Unityへそのままインポートしてください\n　DynamicBonen適応箇所　…　ダイナミックボーンを使用する際参考にしてください\n\n\n【使用の際の注意】\n　Unityへインポートする際は事前にVRCSDKを適応しておいてください。\n\n\n【利用について】\n当モデルの使用で起こる問題は自己責任でお願い致します。ご了承ください。\n\n◆改変について\n　自由です。ただし、改変モデル使用の際はゾーニングにご配慮ください。\n◆パーツ流用について\n　OKです。ただし商用利用などを目的としたモデルに使用する場合はご連絡ください。\n　また、パーツを流用したモデルの再配布は禁止とさせていただきます。\n　ただしVRC内でのアバターのレンタルはOKとします。\n◆商用利用\n　要相談、ご連絡ください。\n◆二次配布\n　禁止します。ただしVRC内でのレンタルはOKとします。\n◆VRChat意外での使用\n　商用利用でない限り全面的にOKです。\n◆性的コンテンツでの使用\n　OKです。","url":"https://booth.pm/ja/items/927242","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1000"},"image":"https://booth.pximg.net/c/620x620/4624dd9e-01a3-4b61-be33-4d2e9ede3984/i/927242/54c487b5-e640-49ae-aa1a-f334979ffd68_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="mYcrTVat4dE2NaE4Rx0ODXRSl/rPBtuIfhm38D3/MKI="></script>
+    nonce="9LLuUkxQlwhsl7NommbRD30Gi28fhcrIq+nRpX/Jc9k="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -384,9 +384,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
