--- a/VRChat/02/926602.html
+++ b/VRChat/02/926602.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "WzEd4Unhrl9lRIObgC3oVyMlJqP4jgZCooiY0rCkcQ8="></script>
+    "+R/Bj661+zODjxW7ADHnP/jFP7H5TaUU5I9sHlmmLfk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"アルビノパフェ","description":"【説明】\nある動画の流れから生まれた伝説のパフェ\n白い物のみを乗せに乗せたパフェだ！\n黄色い所はバナナだけど\nたくあんと認識されても問題ではない。\n何せ大根おろしが飾られているのだから……\n\n【概要】\n遊びで作った+OneDriveでもともと配布済みなのもあり無料配布という形です。\n2000近くあるのでもしVRCへもっていく場合は大量に生成等させないよう対策をしてください。\n\nテクスチャは写真より少し濃い色となっております。\n\n【禁止事項】\n・禁止事項は他の人を不快にさせるといった点を\n禁止とします。\n元の名前になった人がいるのでくれぐれも\n気をつけてください。\n\n・そのまま配布物を売るのはNG。\n\n【使用方法】\n・Blenderも同梱しておいてるので改造したい方はご使用ください。\n\n・UnityPackageも入ってます。\n\n・商用利用はOK。\n\n・そのまま配布物を売るのはNG。改変とわかる程の改変後はOK\nただし責任は負いません。\n\n♦連絡先♦ \ntwitter ： @MiruOssan\nEmail : yakuro7@gmail.com\n\n♦ちょっとした宣伝♦\nyoutube：https://www.youtube.com/channel/UCort0Z_5bhL-vCf9PvwhTyA?view_as=subscriber\n\n\n\n\n","url":"https://booth.pm/ja/items/926602","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/01b894f6-18e3-4efd-93cf-8bfc9c55a251/i/926602/c444302a-e00a-4483-99af-1f2ddc472911_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="WzEd4Unhrl9lRIObgC3oVyMlJqP4jgZCooiY0rCkcQ8="></script>
+    nonce="+R/Bj661+zODjxW7ADHnP/jFP7H5TaUU5I9sHlmmLfk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -372,9 +372,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
