--- a/VRChat/42/926342.html
+++ b/VRChat/42/926342.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "upw2cvSI6CLjE3hJbxkmzuYisUUCKFcN2kM0KnRwR5U="></script>
+    "OE9G2hYxDpnyxZFvM9qo9C5KeW1QdLixIfHHHIdNXBs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"聖典紙(Sacred Paper) ","description":"3Dmodelはこちらで確認できます。\nhttps://sketchfab.com/models/e8a2b34e272c41568c0c2844e95c3c22\n\n\u003c詳細\u003e\n2K(2048×2048)テクスチャー,三角面数320(紙一枚) \n2K(2048×2048)テクスチャー,三角面数58(釘一個) \nUnity,VRChat用にフルスクラッチで作った紙と釘です。 \n\n\u003c説明\u003e\n「くそったれ! 俺はドイツ語なんか読めねぇんだよ!!面倒な結界敷きやがって.....」\n紙は通常,金箔,金の3種類で,釘のモデルも同梱しております。\n\n\u003c規約\u003e \nこのモデル自体の著作権は放棄いたしませんが\nこのモデルの個人利用,商用利用,改変を自由に許可します。\nこのモデルデータが取り出せる状態での2次配布・誹謗中傷等への使用は禁止します。","url":"https://booth.pm/ja/items/926342","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/96c985f2-7e84-49cd-a2f3-277cef2c8d4d/i/926342/b8f8c452-e52b-4235-8892-94a7bd08e26b_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="upw2cvSI6CLjE3hJbxkmzuYisUUCKFcN2kM0KnRwR5U="></script>
+    nonce="OE9G2hYxDpnyxZFvM9qo9C5KeW1QdLixIfHHHIdNXBs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -410,9 +410,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
