--- a/VRChat/82/926282.html
+++ b/VRChat/82/926282.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "N8Ef3lYklcIQhWLGBI3VQCRz1HHQuCeZb74du+GMWyw="></script>
+    "osJe24AkTNYOeCyo9F/Y2my0IkZdeDKh6yQw60AcR4I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【オリジナル3Dモデル】帽子のムスメ　v1.1","description":"注)現在のバージョンでは不具合がある可能性がございます。ご注意ください\n詳細(2018/07時点)\n◆内容\n\u003c帽子のムスメ\u003e\n14000ポリゴン\nVRChat内avatar performance rank:medium\n・Unity package\n・humanoid対応3Dモデル(fbxファイル)\nリップシンク5つ(aa,oh,ou,th,sil)\nアイトラッキング対応\n表情用アニメーションファイル2つ(smile,suffer)\n・テクスチャ(pngファイル)\n※今後モデルの修正\u0026アップデートを実施する予定\n\n◆コメント\n・ご不明点あればお気軽にご連絡下さい。\n\n◆Vrchat使用時のUnity側Import作業\n以下Unity画面内での作業。基本的に他のモデルのアップロード時に実施する作業と同様です。\n\n1.Unity側でVrchatSDK等環境設定を実施\n2.unitypackage読み込み\n2a.eache prefabをhierarchyにドラッグ\n3a.マテリアルへ好みのShader適用。\n(手順は省略)\n3b.vrchatSDK内CustomOverrideEntityにbow.002と各種表情の.animファイルを入れる\n3c.リップシンク(sil,pp,ff→silで埋める。aa,oh,ou→それぞれ設定。それ以外はthで埋める)\n4.vrchat avatar descripter適用、各種項目設定\n5.「VrchatSdkPanel」から「show build control panel」にてアップロード\n\n◆規約\n・必要と判断した際、許諾無しに本規約の変更ができるものとします。(その場合、利用規約は変更後の本規約に基づくものとします。)\n・本データの利用をもって本規約に同意したものとみなします。\n・モデル改変可\n・商用利用可\n・再配布不可(※2)\n・VRC_AvatarPedestalでの本データの利用は要相談\n※2.vrchat、またcluster、Vworldにおける自身のアバターとしての使用を目的としたアップロードは許可します。\n\n◆免責事項\n・当モデルの使用により何らかのトラブル・損失及び損害等が発生した場合、当方は一切の責任を負いません。\n\n◆更新履歴\n2018-7-7:ver1.0リリース\n2018-9-18\n・モデル改修\n・表情、リップシンク、モーション追加\n2018-12-04\n・テクスチャとモデルの改修。アイトラッキング対応\n2019-1-05\n軽量化","url":"https://booth.pm/ja/items/926282","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/709575db-5836-49a2-8a20-efcfb56f7174/i/926282/6c4cd528-5b0d-461b-b3d6-02fb3e4b2e49_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="N8Ef3lYklcIQhWLGBI3VQCRz1HHQuCeZb74du+GMWyw="></script>
+    nonce="osJe24AkTNYOeCyo9F/Y2my0IkZdeDKh6yQw60AcR4I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -461,9 +461,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
