--- a/VRChat/65/925965.html
+++ b/VRChat/65/925965.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "DLFFrF6jCrNK56jpB3Hk4EW+wh+f35Vz0I0GVy68LGg="></script>
+    "okKYA5fE4rbLd4gtkGnnpY0Tw66ka31LZMSVdgcQWMg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"紳士帽子(Gentle hat) ","description":"3Dmodelはこちらで確認できます。\nhttps://sketchfab.com/models/fdbc0ab844fa4e2b911a7fc2024db22f\n\n\u003c詳細\u003e\n2K(2048×2048)テクスチャー,三角面数518 \nUnity,VRChat用にフルスクラッチで作った帽子です。 \n\n\u003c説明\u003e\n「紳士なら人一倍にお洒落をしなくちゃ,だろ?」\nカラーは2タイプございます。気分によってお召しを変えてみてはいかがでしょう？\n\n\u003c規約\u003e \nこのモデル自体の著作権は放棄いたしませんが\nこのモデルの個人利用,商用利用,改変を自由に許可します。\nこのモデルデータが取り出せる状態での2次配布・誹謗中傷等への使用は禁止します。","url":"https://booth.pm/ja/items/925965","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/96c985f2-7e84-49cd-a2f3-277cef2c8d4d/i/925965/531a1ac5-25b2-4669-b5db-09fc997c4733_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="DLFFrF6jCrNK56jpB3Hk4EW+wh+f35Vz0I0GVy68LGg="></script>
+    nonce="okKYA5fE4rbLd4gtkGnnpY0Tw66ka31LZMSVdgcQWMg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -407,9 +407,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
