--- a/VRChat/55/912855.html
+++ b/VRChat/55/912855.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "OGjY/n3WrVQP08oX/Nyjn0x71gyiXcDoKkqSL6ifYA0="></script>
+    "qwjcRKMaiUkx6Kk0RbArpyLwqcR5TgAiS7g2FVE6s8w="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"バヨネット(bayonet)","description":"3Dmodelはこちらで確認できます。\nhttps://sketchfab.com/models/8579fda6bf084a2f8016f14e53bcf0b0\n\n\u003c詳細\u003e\n2K(2048×2048)テクスチャー,三角面数1284 \nUnity,VRChat用にフルスクラッチで作ったバヨネットです。\n\n\u003c説明\u003e\n過去,猛威を振るった殲滅部隊の装備。\nOhne Entschädigung, Kann mann nicht leben. \n人は代償なしに,生きられない.....と刻印されている。\n\n\u003c規約\u003e \nこのモデル自体の著作権は放棄いたしませんが\nこのモデルの個人利用,商用利用,改変を自由に許可します。\nこのモデルデータが取り出せる状態での2次配布・誹謗中傷等への使用は禁止します。","url":"https://booth.pm/ja/items/912855","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/96c985f2-7e84-49cd-a2f3-277cef2c8d4d/i/912855/ac641eb9-6f5c-43c6-a018-50bde2702137_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="OGjY/n3WrVQP08oX/Nyjn0x71gyiXcDoKkqSL6ifYA0="></script>
+    nonce="qwjcRKMaiUkx6Kk0RbArpyLwqcR5TgAiS7g2FVE6s8w="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -408,9 +408,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
