--- a/VRChat/94/923394.html
+++ b/VRChat/94/923394.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Uun72BilHJywfBElKQnP7TtwnhbovO49cKGb+S48N+U="></script>
+    "nSGIpxYqvJwoyM3PVr4mAP5b2nME+7ZCVYAt/t6SpM8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"シンプルステンレスピアス４セット","description":"★シンプルなステンレスピアスです。\n\n１リングと、二色が設定できる２リングに加え、宝石アリナシの計４種類がはいっています。\n\nUnity上で色を変更することができます。\n宝石部分を発光させることもできます。\n\n改変自由です。さりげないワンポイントにどうぞ。","url":"https://booth.pm/ja/items/923394","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/b7fca586-9480-45da-aff4-af2714c85b09/i/923394/4a0ca1c2-98e1-4a08-91e3-da3d25fb5815_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Uun72BilHJywfBElKQnP7TtwnhbovO49cKGb+S48N+U="></script>
+    nonce="nSGIpxYqvJwoyM3PVr4mAP5b2nME+7ZCVYAt/t6SpM8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -389,9 +389,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
