--- a/VRChat/57/918557.html
+++ b/VRChat/57/918557.html
@@ -80,7 +80,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "lxPzi4uwAShKC/YluiCs74Aq1LlKrz3Bu/G1H7sEGSk="></script>
+    "LamJAVh2umdXZAAlJaMsAz3qW7/w4S5UT9tKFJj8Bu0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchat向け　リボン","description":"VRchat向けアクセサリ：リボン\n\nポリゴン数120のFBXファイルと\n上記リボンのテクスチャが入っております\n\n商用利用・私的利用に対してご自由にお使いください\n大々的な再配布はお止めください","url":"https://booth.pm/ja/items/918557","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/eaae416f-80ca-4582-baa6-17cd5c7d41ab/i/918557/5fb0ce87-45ae-4383-82cb-6488cdba137f_base_resized.jpg"}
     </script>
@@ -94,7 +94,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="lxPzi4uwAShKC/YluiCs74Aq1LlKrz3Bu/G1H7sEGSk="></script>
+    nonce="LamJAVh2umdXZAAlJaMsAz3qW7/w4S5UT9tKFJj8Bu0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -373,9 +373,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
